1st iteration of playlist searcher

--- a/Spotify/Views/Shared/_Layout.cshtml
+++ b/Spotify/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="PlaylistSearch">Playlist Search</a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +43,7 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <hr id="footerHr" />
         <footer>
             <p>&copy; 2018 - Spotify</p>
         </footer>
