Changed filtering logic. Using new searchbar

--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -10,7 +10,7 @@
     <h4>@Html.DisplayFor(model => model.href)</h4>
     <hr />
     <div class="row">
-        <div class="col-lg-6">
+        @*<div class="col-lg-6">
             <div class="input-group">
                 <input id="searchbar" class="form-control" aria-label="Text input with multiple buttons">
                 <div class="input-group-btn">
@@ -22,32 +22,30 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </div>*@
         <div class="col-lg-6">
             <div class="input-group">
-                <input type="text" class="form-control" aria-label="...">
+                <input id="searchbar" type="text" class="form-control" aria-label="...">
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Action <span class="caret"></span></button>
-                    <ul class="dropdown-menu dropdown-menu-right">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                    <button id="selectedSearchOption" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">All <span class="caret"></span></button>
+                    <ul id="searchOptions" class="dropdown-menu dropdown-menu-right">
+                        <li><a href="#">All</a></li>
+                        <li><a href="#">Song</a></li>
+                        <li><a href="#">Artist</a></li>
                     </ul>
                 </div><!-- /btn-group -->
             </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
     </div>
     <hr />
-    <dl id="resultsContainer" class="dl-horizontal"></dl>
-    <div class="panel panel-default">
+    @*<dl id="resultsContainer" class="dl-horizontal"></dl>*@
+    <div id="tablePanel" class="panel panel-default">
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th class="text-center">Playlist</thclass="text-center">
-                    <th class="text-center">Artist</th>
-                    <th class="text-center">Track</th>
+                    <th class="text-center">Playlist</th>
+                    <th>Artist</th>
+                    <th>Track</th>
                 </tr>
             </thead>
             <tbody id="tableBody"></tbody>
@@ -64,34 +62,40 @@
     <script>
         var spotifyPlaylists = @Html.Raw(Json.Serialize(Model.items));
 
-        function ShowResults(matches, query, filterSongs, filterArtist) {
-            $("#resultsContainer").empty();
+        function ShowResults(matches, query) {
+            //$("#resultsContainer").empty();
+            $("#tableBody").empty();
             $(matches).each(function (i, p) {
-                $("#resultsContainer").append(
-                    `<dt>
-                        ${p.name}
-                    </dt>`);
+                //$("#resultsContainer").append(`<dt>${p.name}</dt>`);
+                var row = `<tr>
+                            <td class="text-center">${p.name}</td>`;
 
                 var songs = this.songs.items;
-                if (filterSongs)
-                    songs = songs.filter(s => PartialMatchName(s.track.name, query));
-                else if (filterArtist)
-                    songs = songs.filter(s => PartialMatchName(s.track.artistsString, query));
+                songs = songs.filter(s => PartialMatchName(s.track.name, query) || PartialMatchName(s.track.artistsString, query));
+
+                var artists = ""
+                var tracks = "";
 
                 $(songs).each(function (i, s) {
-                    $("#resultsContainer").append(
-                        `<dd>
-                        ${s.track.artistsString} - ${s.track.name}
-                    </dd>`);
-                    $("#tableBody").append(
-                        `<tr>
-                            <td class="text-center">${p.name}</td>
-                            <td class="text-center">${s.track.artistsString}</td>
-                            <td class="text-center">${s.track.name}</td>
-                        </tr>`);
+                    //$("#resultsContainer").append(`<dd>${s.track.artistsString} - ${s.track.name}</dd>`);
+                    artists += `<p>${s.track.artistsString}</p>`;
+                    tracks += `<p>${s.track.name}</p>`;
+                    //$("#tableBody").append(
+                    //    `<tr>
+                    //        <td class="text-center">${p.name}</td>
+                    //        <td class="text-center">${s.track.artistsString}</td>
+                    //        <td class="text-center">${s.track.name}</td>
+                    //    </tr>`);
                 });
-                $("#resultsContainer").append("<hr />");
+                row += `<td>${artists}</td>
+                        <td>${tracks}</td>
+                    </tr>`
+                $("#tableBody").append(row);
+                //$("#resultsContainer").append("<hr />");
             });
+
+            if (matches.length > 0)
+                $("#tablePanel").show();
         }
 
         $("#goSong").click(function () {
@@ -99,7 +103,7 @@
             var matches = spotifyPlaylists
                 .filter(p => p.songs.items
                     .find(s => PartialMatchName(s.track.name, query)));
-            ShowResults(matches, query, true, false);
+            ShowResults(matches, query);
         });
 
         $("#goArtist").click(function () {
@@ -107,15 +111,39 @@
             var matches = spotifyPlaylists
                 .filter(p => p.songs.items
                     .find(s => PartialMatchName(s.track.artistsString, query)));
-            ShowResults(matches, query, false, true);
+            ShowResults(matches, query);
         });
+
+
+        $("#searchbar").keyup(function () {
+            var query = $(this).val();
+            var matches = spotifyPlaylists
+                .filter(p => p.songs.items
+                    .find(s => GetMatch(s.track, query)));
+            ShowResults(matches, query);
+        });
+
+        function GetMatch(track, query) {
+            if ($("#selectedSearchOption").text().includes("Song"))
+                return PartialMatchName(track.name, query)
+
+            if ($("#selectedSearchOption").text().includes("Artist"))
+                return PartialMatchName(track.artistsString, query)
+
+            return PartialMatchName(track.name, query) || PartialMatchName(track.artistsString, query);
+        }
 
         function PartialMatchName(name, queriedTrackName) {
             return name.toLowerCase().includes(queriedTrackName.toLowerCase().trim());
         }
 
+        $("#searchOptions li").click(function () {
+            $("#selectedSearchOption").html(`${$(this).text()} <span class="caret"></span>`);
+        });
+
+
         $(document).ready(function () {
-            $("#footerHr").hide();
+            $("#tablePanel").hide();
         });
     </script>
 }
