--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -1,4 +1,4 @@
-﻿@model Spotify.Models.PlaylistsResponse
+﻿@model Spotify.Models.SpotifyItemResponse<PlaylistItem>
 
 @{
     ViewData["Title"] = "PlaylistSearch";
@@ -7,7 +7,7 @@
 <h2>Playlist Search</h2>
 
 <div>
-    <h4>@Html.DisplayFor(model => model.href)</h4>
+    <h4>Farts</h4>
     <hr />
     <div class="row">
         @*<div class="col-lg-6">
