--- a/Spotify/Views/Home/Index.cshtml
+++ b/Spotify/Views/Home/Index.cshtml
@@ -69,7 +69,8 @@
     <script>
         function getHashParams() {
             var hashParams = {};
-            var e, r = /([^&;=]+)=?([^&;]*)/g,
+            var e,
+                r = /([^&;=]+)=?([^&;]*)/g,
                 q = window.location.hash.substring(1);
             while (e = r.exec(q)) {
                 hashParams[e[1]] = decodeURIComponent(e[2]);
@@ -80,7 +81,7 @@
         $(document).ready(function() {
             var params = getHashParams();
             if (params.access_token) {
-                window.location = '/home/playlistsearch?accessToken=' + params.access_token;
+                window.location = `/home/playlistsearch?access_token=${params.access_token}`;
             }
         });
     </script>
