--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -25,7 +25,7 @@
         </div><!-- /.col-lg-6 -->
     </div>
     <hr />
-    <div id="tablePanel" class="panel panel-default">
+    <div id="tablePanel" class="panel panel-default hidden">
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -45,10 +45,6 @@
 @section scripts {
     <script>
         var Playlists = @Html.Raw(Json.Serialize(Model));
-
-        $(document).ready(() => {
-            $("#tablePanel").hide();
-        });
     </script>
     <script src="~/js/search/playlistSearch.js"></script>
 }
