--- a/Spotify/Views/Home/Index.cshtml
+++ b/Spotify/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@using System.Text.Encodings.Web
-@using Microsoft.AspNetCore.Http.Extensions
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Spotty";
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
@@ -58,13 +57,13 @@
 <div class="row">
     <div class="col-md-12 text-center">
         <h1>GET THAT TOKEN BOY</h1>
-        <a href="https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=token">
+        <a href="https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetEncodedRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=token">
             <div class="btn btn-default">Implicit Grant</div>
         </a>
     </div>
     <div class="col-md-12 text-center">
         <h1>GET THAT CODE BOY</h1>
-        <a href="https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=code">
+        <a href="https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetEncodedRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=code">
             <div class="btn btn-default">Authorization Code</div>
         </a>
     </div>
@@ -73,34 +72,23 @@
 @section Scripts
     {
     <script>
-        function getHashParams() {
-            var hashParams = {};
-            var e,
-                r = /([^&;=]+)=?([^&;]*)/g,
-                q = window.location.hash.substring(1);
-            while (e = r.exec(q)) {
-                hashParams[e[1]] = decodeURIComponent(e[2]);
-            }
-            return hashParams;
-        }
-
         $(document).ready(function () {
-            var params = getHashParams();
+            var params = GetAllParams()
             if (params.access_token) {
-                var expiry = new Date().valueOf() + params.expires_in * 1000;
+                ShowLoader();
+                var expiry = CalculateUnixInMsExpiry(params.expires_in);
                 window.location = `/home/playlistsearch?access_token=${params.access_token}&expiry=${expiry}`;
             }
-
-            //if (params.code) {
-            //    var expiry = new Date().valueOf() + params.expires_in * 1000;
-            //    window.location = `/home/privacy?access_token=${params.code}&expiry=${expiry}`;
-            //}
+            if (params.code) {
+                ShowLoader();
+                window.location = `/home/authcoderedirect?code=${params.code}&redirect_uri=@(GetEncodedRedirectUri())`;
+            }
         });
     </script>
 }
 
 @functions {
-    string GetRedirectUri()
+    string GetEncodedRedirectUri()
     {
         string baseUrl = Context.Request.Scheme + "://" + Context.Request.Host + "/";
         return UrlEncoder.Default.Encode(baseUrl);
