--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -3,7 +3,7 @@
 @model List<PlaylistItem>
 
 @{
-    ViewData["Title"] = "Playlist Searcher";
+    ViewData["Title"] = "Playlist Search";
 }
 <h2>Playlist Search</h2>
 
