--- a/Spotify/Views/Home/Index.cshtml
+++ b/Spotify/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Text.Encodings.Web
 @{
-    ViewData["Title"] = "Spotty";
+    ViewData["Title"] = "Home";
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
