--- a/Spotify/Views/Home/Index.cshtml
+++ b/Spotify/Views/Home/Index.cshtml
@@ -2,69 +2,20 @@
 @{
     ViewData["Title"] = "Home";
 }
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-        <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
 <div class="row">
-    <div class="col-md-12 text-center">
-        <h1>GET THAT TOKEN BOY</h1>
-        <a href="https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetEncodedRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=token">
-            <div class="btn btn-default">Implicit Grant</div>
-        </a>
+    <div class="col-md-12">
+        <img class="img-responsive" src="~/images/xxx.jpg" />
     </div>
+    @*<div class="col-md-12 text-center">
+            <h1>GET THAT TOKEN BOY</h1>
+            <a href="https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetEncodedRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=token">
+                <div class="btn btn-default">Implicit Grant</div>
+            </a>
+        </div>*@
     <div class="col-md-12 text-center">
-        <h1>GET THAT CODE BOY</h1>
+        <h1>GET IT BOY</h1>
         <a href="https://accounts.spotify.com/authorize?client_id=@(ViewBag.ClientId)&redirect_uri=@(GetEncodedRedirectUri())&scope=playlist-read-private%20playlist-modify-public%20playlist-modify-private&response_type=code">
-            <div class="btn btn-default">Authorization Code</div>
+            <div class="btn btn-default">Authorization</div>
         </a>
     </div>
 </div>
@@ -88,9 +39,9 @@
 }
 
 @functions {
-    string GetEncodedRedirectUri()
-    {
-        string baseUrl = Context.Request.Scheme + "://" + Context.Request.Host + "/";
-        return UrlEncoder.Default.Encode(baseUrl);
-    }
+string GetEncodedRedirectUri()
+{
+    string baseUrl = Context.Request.Scheme + "://" + Context.Request.Host + "/";
+    return UrlEncoder.Default.Encode(baseUrl);
+}
 }
