--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -15,7 +15,7 @@
         @if (!StringValues.IsNullOrEmpty(Context.Request.Query["refresh_token"]))
         {
             <div class="col-xs-6 text-right ">
-                <div id="refreshButton" class="btn btn-default">Refresh Token</div>
+                <div id="refreshButton" class="btn btn-default">Refresh</div>
             </div>
         }
     </div>
@@ -54,9 +54,15 @@
 
 
 @section scripts {
-    <script src="~/js/countdown.js" asp-append-version=true></script>
     <script>
         var Playlists = @Html.Raw(Json.Serialize(Model));
     </script>
-    <script src="~/js/search/playlistSearch.js" asp-append-version=true></script>
+
+    <environment include="Development">
+        <script src="~/js/countdown.js" asp-append-version=true></script>
+        <script src="~/js/playlistSearch.js" asp-append-version=true></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="~/js/playlistSearch.min.js" asp-append-version=true></script>
+    </environment>
 }
