Added two refresh buttons. Clock now starts at 59:59 Updated vars to ES6 conventions

--- a/Spotify/Views/Home/AuthCodeRedirect.cshtml
+++ b/Spotify/Views/Home/AuthCodeRedirect.cshtml
@@ -4,5 +4,5 @@
 }
 
 <h2>AuthCodeRedirect</h2>
-This page is because I'm lazy.
-It should never be used.
+This page exists is because I'm lazy.
+It should never be seen.
