--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -9,18 +9,20 @@
 
 <div>
     <div class="row">
-        <div id="clockdiv" class="col-xs-6">
-            <h4>Session: <span class="minutes"></span>:<span class="seconds"></span></h4>
+        <div class="col-xs-6">
+            <h4>@($"{DateTime.Now:dd/MM h:mm tt}")</h4>
         </div>
-        @if (!StringValues.IsNullOrEmpty(Context.Request.Query["refresh_token"]))
-        {
-            <div class="col-xs-6 text-right ">
-                <div id="refreshDataButton" class="btn btn-default spotty-refresh-button">Refresh Data</div>
-            </div>
-            <div class="col-xs-6 text-right">
-                <div id="refreshTokenButton" class="btn btn-default spotty-refresh-button">Refresh Token</div>
-            </div>
-        }
+        <div class="col-xs-6 text-right ">
+            <div id="refreshDataButton" class="btn btn-default spotty-refresh-button">Refresh Data</div>
+        </div>
+    </div>
+    <div class="row">
+        <div id="clockdiv" class="col-xs-6">
+            <h4>Session: <span class="countdownDisplay"></span></h4>
+        </div>
+        <div class="col-xs-6 text-right">
+            <div id="refreshTokenButton" class="btn btn-default spotty-refresh-button">Refresh Token</div>
+        </div>
     </div>
     <hr />
     <div class="row">
