--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -5,12 +5,12 @@
 @{
     ViewData["Title"] = "Playlist Search";
 }
-<h2>Playlist Search</h2>
+<h2 id="secretViewSwitch">Playlist Search</h2>
 
 <div>
     <div class="row">
         <div class="col-xs-6">
-            <h4>@($"{DateTime.Now:dd/MM h:mm tt}")</h4>
+            <h4>Taken: @($"{DateTime.Now:dd/M HH:mm}")</h4>
         </div>
         <div class="col-xs-6 text-right ">
             <div id="refreshDataButton" class="btn btn-default spotty-refresh-button">Refresh Data</div>
@@ -40,19 +40,22 @@
             </div><!-- /input-group -->
         </div><!-- /.col-lg-6 -->
     </div>
-    <hr />
-    <div id="tablePanel" class="panel panel-default hidden">
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th class="text-center">Playlist</th>
-                    <th>Artist</th>
-                    <th>Track</th>
-                </tr>
-            </thead>
-            <tbody id="tableBody"></tbody>
-        </table>
+
+    <div id="resultsContainer">
     </div>
+    
+    <div id="tablePanel" class="panel panel-default media hidden">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th class="text-center">Playlist</th>
+                        <th>Artist</th>
+                        <th>Track</th>
+                    </tr>
+                </thead>
+                <tbody id="tableBody"></tbody>
+            </table>
+        </div>
 </div>
 <div>
 </div>
