Added JS listener on window size to use table on desktop and tablet

--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -9,7 +9,7 @@
 <div>
     <div class="row">
         <div class="col-xs-6">
-            <h4>Taken: @($"{DateTime.Now:dd/M HH:mm}")</h4>
+            <h4>@($"{DateTime.Now:dd/MM h:mm tt}")</h4>
         </div>
         <div class="col-xs-6 text-right ">
             <div id="refreshDataButton" class="btn btn-default spotty-refresh-button">Refresh Data</div>
