--- a/Spotify/wwwroot/css/site.css
+++ b/Spotify/wwwroot/css/site.css
@@ -43,7 +43,7 @@ body {
 .artist-name {
     margin-top: -13px;
     font-size: smaller;
-    color: slategrey;
+    color: grey;
 }
 
 .playlist-section {
