--- a/Spotify/Views/Home/PlaylistSearch.cshtml
+++ b/Spotify/Views/Home/PlaylistSearch.cshtml
@@ -20,7 +20,7 @@
             <h4>Session: <span class="countdownDisplay"></span></h4>
         </div>
         <div class="col-xs-6 text-right">
-            <div id="refreshTokenButton" class="btn btn-default spotty-refresh-button">Refresh Token</div>
+            <div id="refreshTokenButton" class="btn btn-default spotty-refresh-button">Refresh Session</div>
         </div>
     </div>
     <hr />
