--- a/Spotify/Views/Shared/_LoaderPartial.cshtml
+++ b/Spotify/Views/Shared/_LoaderPartial.cshtml
@@ -6,5 +6,8 @@
         <div class="overlay__content">
             <div class="lds-hourglass"></div>
         </div>
+        <div class="overlay__content">
+            <div id="loaderMessage" class="loader-message"></div>
+        </div>
     </div>
 </div>
